QtSupport: Default to Qt5 module names

When adding includes for Qt classes with module names: Default to Qt5
names (if no Qt version ifdef is wanted).

Task-number: QTCREATORBUG-13267
Change-Id: I214315589e4876215ff5993aa91359f11c5cf8f6
Reviewed-by: Daniel Teske <daniel.teske@digia.com>